# PointPillars

./: .gitignore  LICENSE  README.md  evaluate.py  install.sh  pre_process_kitti.py  reinstall.sh  requirements.txt  setup.py  test.py  train.py
dataset/: data_aug.py  kitti.py
deployment/: README.md  onnx_infer.py  pytorch2onnx.py  pytorch_infer.py  vis_infer_result.py
deployment/infer_results/: onnx.txt  onnx_origin.txt  pytorch.txt  trt-fp16.txt  trt.txt
deployment/trt_infer/: CMakeLists.txt  trt_infer.cpp
deployment/trt_infer/include/: common_trt.h  io_trt.hpp  nms_trt.h  utils.h  voxelization_trt.h  voxelization_trt.hpp
deployment/trt_infer/src/: nms_trt.cpp  utils.cpp  voxelization_trt.cpp  voxelization_trt.cu
loss/: __init__.py
misc/: deployment_log.md  log.md  vis_data_gt.py
model/: __init__.py  anchors.py  pointpillars.py
ops/: setup.py  voxel_module.py
pointpillars/dataset/: __init__.py  data_aug.py  dataloader.py  kitti.py
pointpillars/dataset/demo_data/val/: 000134_gt.txt
pointpillars/loss/: loss.py
pointpillars/model/: __init__.py  anchors.py  pointpillars.py
pointpillars/ops/: iou3d_module.py  voxel_module.py
pointpillars/ops/voxelization/: voxelization.cpp  voxelization.h
pointpillars/utils/: __init__.py  io.py  process.py  vis_o3d.py
utils/: io.py  process.py  viewpoint.json  vis_o3d.py
